# student_motivation_crewai

./: README.md  app.py  input_grades.csv  input_letter.txt  plan.txt  requirements.txt
iws2/: README.md  plan.txt  pyproject.toml
iws2/src/iws2/: crew.py  main.py
iws2/src/iws2/config/: agents.yaml  tasks.yaml
