[project]
name = "iws2"
version = "0.1.0"
description = "iws2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "google-genai>=1.66.0",
]

[project.scripts]
iws2 = "iws2.main:run"
run_crew = "iws2.main:run"
train = "iws2.main:train"
replay = "iws2.main:replay"
test = "iws2.main:test"
run_with_trigger = "iws2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
